# PHAS0100-Research-Computing-with-Cpp

./: README.md
src/app/: CMakeLists.txt  FindStationaryPatterns.cpp  gofSimulator.cpp
src/lib/: CMakeLists.txt  golImplementGol.cpp  golImplementGol.h  golMyFunctions.cpp  golMyFunctions.h
test/: CMakeLists.txt  golDataStructureTest.cpp  golDiffInstanceDiffAliveTest.cpp  golFetchLiveNeighboursTest.cpp  golGetSetCellTest.cpp  golInitialGridFromFileTest.cpp  golTakestepTest.cpp
